Fixed various UI elements

--- a/WebGUI/html/SlowControlsDashboard.html
+++ b/WebGUI/html/SlowControlsDashboard.html
@@ -362,8 +362,8 @@
 				left: 10%;
 				background-color: rgba(0, 0, 0, 0.8);
 				border: 1px solid #888;
-			    width: 80%;
-				height: 80%;
+			    	width: 80%;
+				height: 80%;	
 			    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
 			    -webkit-animation-name: animatetop;
 			    -webkit-animation-duration: 0.4s;
@@ -1360,18 +1360,19 @@
 				var table = document.createElement("table");
 				table.id = "widgetPVTable";
 				table.className = "widgetPopupTable";
-				table.style.width = "100%";
-				table.style.height = "100%";
+				table.style.width = "95%";
+				table.style.height = "95%";
+				table.style.margin = "auto";
 				var thead = document.createElement("thead");
 				var trhead = document.createElement("tr");
 				var thPV = document.createElement("th");
 //				thPV.className = "widgetPopupTable";
 				thPV.innerHTML = "PV Name";
-				thPV.style.width = "75%";
+				thPV.style.width = "60%";
 				var thRefresh = document.createElement("th");
 //				thRefresh.className = "widgetPopupTable";
 				thRefresh.innerHTML = "Refresh Rate";
-				thRefresh.style.width = "25%";
+				thRefresh.style.width = "40%";
 				trhead.appendChild(thPV);
 				trhead.appendChild(thRefresh);
 				thead.appendChild(trhead);
@@ -1399,7 +1400,7 @@
 				var attributeTable = document.createElement("table");
 				attributeTable.id = "widgetAttributesTable";
 				attributeTable.className = "widgetPopupTable";
-				attributeTable.style.width = "100%";
+				attributeTable.style.width = "95%";
 				attributeTable.style.height = "100%";
 				var thead = document.createElement("thead");
 				var trhead = document.createElement("tr");
@@ -1437,13 +1438,13 @@
 				footer.innerHTML = "";
 				var closeButton = document.createElement("button");
 				closeButton.className = "editPopupButton";
-				closeButton.style.left = "80%";
+				closeButton.style.left = "55%";
 				closeButton.innerHTML = "Close";
 				closeButton.onclick = function(){editWidgetAttributesClose();};
 				footer.appendChild(closeButton);
 				var saveButton = document.createElement("button");
 				saveButton.className = "editPopupButton";
-				saveButton.style.left = "60%";
+				saveButton.style.left = "35%";
 				saveButton.innerHTML = "Save";
 				saveButton.onclick = function(){editWidgetAttributesSave();};
 				footer.appendChild(saveButton);				
