checkpoint. tree-view editing fixed some Lore-identified bugs

--- a/WebGUI/html/ConfigurationTableEditor.html
+++ b/WebGUI/html/ConfigurationTableEditor.html
@@ -479,7 +479,7 @@
 
 
 		//selectThisCell ~~
-		function selectThisCell(r,c,el) 
+		function selectThisCell(r,c,el,event) 
 		{		
 			if(event) //stop the body from also calling onmouseup and cancelling select
 			{
