checkpoint. tree-view editing fixed some Lore-identified bugs

--- a/WebGUI/html/MultiSelectBoxTest.html
+++ b/WebGUI/html/MultiSelectBoxTest.html
@@ -14,6 +14,9 @@
 		//THIS IS AN EXAMPLE 
 			//of how to use the library MultiSelectBox.js
 
+		//you can view it in your browser:
+		// e.g. on rulinux03:
+		//http://rulinux03.dhcp.fnal.gov:PORT/WebPath/html/MultiSelectBoxTest.html
 
         function init()
         {
