--- a/WebGUI/html/ConfigurationGUI.html
+++ b/WebGUI/html/ConfigurationGUI.html
@@ -406,7 +406,7 @@
 			
 			//setupConfigCreator(); return
 			
-			//setupConfigGroupTreeView("artdaqFclTest","46"); return;
+			setupConfigGroupTreeView("artdaqFclTest","46"); return;
 			
 			//setupGroupViewMode(); return;
 
@@ -6228,6 +6228,7 @@
 					reqStr = ""; //reuse
 					reqStr = "Request?RequestType=saveNewConfigurationGroup" +
 							"&groupName=" + affectedArr[0] +
+							"&allowDuplicates=1" +
 							"&ignoreWarnings=" + (ignoreWarnings?1:0);										
 					Debug.log(reqStr);
 					Debug.log(configMap);
