--- a/WebGUI/html/ConfigurationGUI.html
+++ b/WebGUI/html/ConfigurationGUI.html
@@ -2126,7 +2126,7 @@
 				
 				//add Activate link
 				treeViewHandlerStr_ += " <a id='treeView-ConfigGroupActivateLink' " +
-						href='#' onclick='javascript:activateSystemConfig(\"" + configGroupName +
+						"href='#' onclick='javascript:activateSystemConfig(\"" + configGroupName +
 						"\",\"" + configGroupKey + "\"); return false;'>";
 				treeViewHandlerStr_ += "Activate</a>";
 				
