tooltip progress. StartOTS verbose mode changes. minor Debug and DesktopWindowContent changes.

--- a/WebGUI/html/ConfigurationGUI.html
+++ b/WebGUI/html/ConfigurationGUI.html
@@ -393,7 +393,7 @@
 		function init() {			
 						
 			Debug.log("CfgGUI init ");
-			DesktopContent.tooltip("Introduction",
+			DesktopContent.tooltip("Configuration GUI Introduction",
 					"Welcome to the Configuration GUI. Here you can manipulate every configuration "+
 					"parameter in your entire <i>otsdaq</i> system. \n\n" +
 					"The organization of the Configuration GUI is as follows:\n" +
