--- a/WebGUI/html/EditSecurity.html
+++ b/WebGUI/html/EditSecurity.html
@@ -16,7 +16,7 @@
 
 <body onload="init()">
   <!--<h1>Edit Security</h1>-->
-  <h2 id="state"></h2>
+  <h2 id="state" style='display:none'></h2>
   <ul>
 
   <li>
@@ -81,7 +81,6 @@
   </div>	
   </div> 	
   </li>
-  	-->	
   		
   <li>
 	
@@ -105,6 +104,7 @@
   </div>	
   </div> 	
   </li>
+  	  	-->	
 
   	
   </ul>
