added configuration dump feature for configure and run transition. also for Halt to happen on Stop transitions for artdaq components.

--- a/WebGUI/html/ConfigurationGUI.html
+++ b/WebGUI/html/ConfigurationGUI.html
@@ -6096,9 +6096,8 @@
 
 				str += "<input id='popUpDialog-submitButton' type='button' onmouseup='" + 
 						onmouseupJS + "' " +
-						"value='Activate and Alias' title='" +
-						"Activate the current Save new versions of every modified table\n" +
-						"(Optionally, save new active groups and assign system aliases)" +
+						"value='Alias' title='" +
+						"Set the System Alias to the current Group name and key" +						
 						"'/>";
 				el.innerHTML = str;
 
