tooltips in wiz mode desktop now work.

--- a/WebGUI/html/EditUserData.html
+++ b/WebGUI/html/EditUserData.html
@@ -311,8 +311,8 @@
 	<div class="details">
 		<span class="heading">Reset User Data</span>
 		<hr />
-		<p>Click this button to reset ALL user data 
-		(i.e. delete accounts, passwords, preferences, etc.). This is irreversible.
+		<p>Click this button to reset ALL user data back to 'factory settings'
+		(i.e. delete accounts, passwords, preferences, logbook entries, etc.). This is irreversible.
 		<br>
 		<br>
   		<b>Make sure this is really what you want to do before clicking!!</b></p>		
