added desktop folder feature for managing multiple icons.

--- a/WebGUI/html/OtsConfigurationWizard.html
+++ b/WebGUI/html/OtsConfigurationWizard.html
@@ -18,14 +18,18 @@
 		<script type="text/JavaScript" src="/WebPath/js/Desktop.js"></script>
 		<script type="text/JavaScript" src="/WebPath/js/js_lib/SimpleContextMenu.js"></script>
 
+		<!-- MultiSelectBox: Must include .css style sheet and .js functionality -->
+		<link rel="stylesheet" type="text/css" href="/WebPath/css/MultiSelectBox.css">
+		<script src="/WebPath/js/js_lib/MultiSelectBox.js"></script>	
+
+		<!-- adding DesktopWindowContentCode for tooltip functionality -->
+		<script type="text/JavaScript" src="/WebPath/js/DesktopWindowContentCode.js"></script> 
+
 		<script type="text/JavaScript" src="/WebPath/js/DesktopDashboard.js"></script>
 		<script type="text/JavaScript" src="/WebPath/js/DesktopWindow.js"></script>
 		<script type="text/JavaScript" src="/WebPath/js/DesktopIcons.js"></script>
 		<script type="text/JavaScript" src="/WebPath/js/DesktopLogin.js"></script>
 
-
-		<!-- adding DesktopWindowContentCode for tooltip functionality -->
-		<script type="text/JavaScript" src="/WebPath/js/DesktopWindowContentCode.js"></script> 
 
 		<script>
 			var urnLid = ((window.location.search.substr(1)).split('='))[1];
