added desktop folder feature for managing multiple icons.

--- a/WebGUI/html/EditUserData.html
+++ b/WebGUI/html/EditUserData.html
@@ -315,7 +315,7 @@
 		(i.e. delete accounts, passwords, preferences, logbook entries, etc.). This is irreversible.
 		<br>
 		<br>
-  		<b>Make sure this is really what you want to do before clicking!!</b></p>		
+  		<b>Make sure this is really what you want to do!!</b></p>		
 		<a href="#" onclick="confirm()" class="button">Select</a>		
 	</div>
 	<div class="bg"></div>
