working with lcls2

--- a/WebGUI/html/StateMachine.html
+++ b/WebGUI/html/StateMachine.html
@@ -1262,9 +1262,9 @@
 			    if(_altStateDrawingMode)
 			    {
 			    	if(_canvas.width < _canvas.height)
-			    		_perimeterRadius = (_canvas.width - 2*_CANVAS_STATE_MARGIN)/_ALT_GRID_WIDTH;
+			    		_perimeterRadius = (_canvas.width - 2*_CANVAS_STATE_MARGIN - _stateOvalRadius*2)/_ALT_GRID_WIDTH;
 			    	else
-			    		_perimeterRadius = (_canvas.height - 2*_CANVAS_STATE_MARGIN)/_altStateGrid.length;
+			    		_perimeterRadius = (_canvas.height - 2*_CANVAS_STATE_MARGIN - _stateOvalRadius*2)/_altStateGrid.length;
 			    }
 			    else
 			    	_perimeterRadius = (_canvas.width < _canvas.height?_canvas.width:_canvas.height)/2 -
